# fake-openai-server

./: LoggerConfig.py  README.md  compose-legacy.yaml  compose.yaml  embeddings-api-server.py  pyproject.toml  rerank-api-server.py  reranker-api-server.py  test-services.sh  test_dependencies.py  validate-docker.sh
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
Docker/base-server/: Dockerfile  setup.sh
Docker/embeddings-server/: Dockerfile
Docker/reranker-server/: Dockerfile
Docker/unified-server/: Dockerfile  entrypoint.sh
issues/: build_failure_sentencepiece.md
